[project]
name = "ragproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "inngest",
    "llama-index-core",
    "llama-index-readers-file",
    "openai",
    "python-dotenv",
    "qdrant-client",
    "streamlit",
    "uvicorn[standard]>=0.49.0",
]
